First commit - added API keys and made small changes to UI to show we're running

--- a/static/demo.html
+++ b/static/demo.html
@@ -29,7 +29,7 @@
       <div id="map"></div>
 
       <div class="ffwdme-debug-wrapper">
-        <button id="views-toggle" class="hidden">Toggle Components</button>
+        <button id="views-toggle" class="hidden">Toggle Menus</button>
         <button id="nav-info-trigger" class="hidden">Nav Info</button>
         <button id="routing-trigger" class="hidden">Routing</button>
 
