--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,7 @@
           <a href="demo.html?debug=true">Demo Page</a><br/>
           Start the demo page in debug mode and click on the "Routing" tab to
           see the navigation in action.
+          Proof this is being rendered.
         </p>
       </li>
       <li>
